--- a/modules/admin/view/action/edit.phtml
+++ b/modules/admin/view/action/edit.phtml
@@ -1,5 +1,6 @@
 <ul class="maintabmenu multipletabmenu">
     <li><a href="/admin/action/">Akce</a></li>
+    <li><a href="/admin/action/showattendance/">Docházka</a></li>
     <li><a href="/admin/action/add/">Přidat Akci</a></li>
     <li class="current"><a href="#">Upravit Akci</a></li>
     <li><a href="/admin/action/help/">Nápověda</a></li>
@@ -45,7 +46,7 @@
             <p>
                 <label>Název*</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('title', array($action,'title'), true)}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'title', array($action,'title'), array('required'=>true))}
                     {if isset($errors["title"])}
                     <label class="error">{echo join("<br/>", $errors["title"])}</label>
                     {/if}
@@ -54,7 +55,7 @@
             <p>
                 <label>Pořadí<small>Max. 99</small></label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('rank', array($action,'rank'))}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'rank', array($action,'rank',1))}
                     {if isset($errors["rank"])}
                     <label class="error">{echo join("<br/>", $errors["rank"])}</label>
                     {/if}
@@ -63,7 +64,7 @@
             <p>
                 <label>Teaser*<small>Max. 750 znaků</small></label>
                 <span class="field">
-                    <textarea rows="20" name="shorttext" id="ckeditor2">{echo $action->shortBody}</textarea>
+                    <textarea rows="20" name="shorttext" id="ckeditor2">{echo \Admin\Helper\FormPrinter::iset($action,'shortBody')}</textarea>
                     {if isset($errors["shortBody"])}
                     <label class="error">{echo join("<br/>", $errors["shortBody"])}</label>
                     {/if}
@@ -81,7 +82,7 @@
             <p>
                 <label>Text*</label>
                 <span class="field">
-                    <textarea rows="20" name="text" id="ckeditor">{echo $action->body}</textarea>
+                    <textarea rows="20" name="text" id="ckeditor">{echo \Admin\Helper\FormPrinter::iset($action,'body')}</textarea>
                     {if isset($errors["body"])}
                     <label class="error">{echo join("<br/>", $errors["body"])}</label>
                     {/if}
@@ -98,8 +99,8 @@
             <p>
                 <label>Datum - začátek</label>
                 <span class="field">
-                    Datum: {echo \Admin\Helper\FormPrinter::textInput('datestart', array($action,'startDate'), false, 'width20 datepicker2')}
-                    Čas: {echo \Admin\Helper\FormPrinter::timeInput('timestart', array($action,'startTime'), false, 'width20')}
+                    Datum: {echo \Admin\Helper\FormPrinter::input('text', 'datestart', array($action,'startDate'), array('class'=>'width20 datepicker2'))}
+                    Čas: {echo \Admin\Helper\FormPrinter::input('time', 'timestart', array($action,'startTime'), array('class'=>'width20'))}
 
                     {if isset($errors["startDate"])}
                     <label class="error">{echo join("<br/>", $errors["startDate"])}</label>
@@ -112,8 +113,8 @@
             <p>
                 <label>Datum - konec</label>
                 <span class="field">
-                    Datum: {echo \Admin\Helper\FormPrinter::textInput('dateend', array($action,'endDate'), false, 'width20 datepicker3')}
-                    Čas: {echo \Admin\Helper\FormPrinter::timeInput('timeend', array($action,'endTime'), false, 'width20')}
+                    Datum: {echo \Admin\Helper\FormPrinter::input('text', 'dateend', array($action,'endDate'), array('class'=>'width20 datepicker2'))}
+                    Čas: {echo \Admin\Helper\FormPrinter::input('time', 'timeend', array($action,'endTime'), array('class'=>'width20'))}
 
                     {if isset($errors["endDate"])}
                     <label class="error">{echo join("<br/>", $errors["endDate"])}</label>
@@ -127,27 +128,14 @@
                 <label>Typ</label>
                 <span class="field">
                     <select name="type" class="width80">
-                        {if $action->actionType == 1}
-                        <option value="0">-- Vybrat --</option>
-                        <option value="1" selected>Trénink</option>
-                        <option value="2">Zápas</option>
-                        <option value="3">Party Hard</option>
-                        {/if}{elseif $action->actionType == 2}
-                        <option value="0">-- Vybrat --</option>
-                        <option value="1">Trénink</option>
-                        <option value="2" selected>Zápas</option>
-                        <option value="3">Party Hard</option>
-                        {/elseif}{elseif $action->actionType == 3}
-                        <option value="0">-- Vybrat --</option>
-                        <option value="1">Trénink</option>
-                        <option value="2">Zápas</option>
-                        <option value="3" selected>Party Hard</option>
-                        {/elseif}{else}
-                        <option value="0">-- Vybrat --</option>
-                        <option value="1">Trénink</option>
-                        <option value="2">Zápas</option>
-                        <option value="3">Party Hard</option>
-                        {/else}
+                        {foreach $type in \App\Model\ActionModel::getTypes()}
+                            {script $sel=""}
+                            {if $type_i == $action->actionType}
+                                {script $sel="selected"}
+                            {/if}
+                        
+                            <option value="{echo $type_i}" {echo $sel}>{echo $type}</option>
+                        {/foreach}
                     </select>
                 </span>
             </p>
@@ -174,19 +162,14 @@
                 <label>Schváleno</label>
                 <span class="field">
                     <select name="approve" class="width80">
-                        {if $action->approved == 0}
-                        <option value="0" selected>Čeká na shválení</option>
-                        <option value="1">Schváleno</option>
-                        <option value="2">Zamítnuto</option>
-                        {/if}{elseif $action->approved == 1}
-                        <option value="0">Čeká na shválení</option>
-                        <option value="1" selected>Schváleno</option>
-                        <option value="2">Zamítnuto</option>
-                        {/elseif}{else}
-                        <option value="0">Čeká na shválení</option>
-                        <option value="1">Schváleno</option>
-                        <option value="2" selected>Zamítnuto</option>
-                        {/else}
+                        {foreach $type in \App\Model\ActionModel::getStates()}
+                            {script $sel=""}
+                            {if $type_i == $action->approved}
+                                {script $sel="selected"}
+                            {/if}
+                        
+                            <option value="{echo $type_i}" {echo $sel}>{echo $type}</option>
+                        {/foreach}
                     </select>
                 </span>
             </p>
@@ -212,8 +195,7 @@
             <p>
                 <label>Meta-název</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('metatitle', array($action,'metaTitle'), false, 'width80', "Výchozí hodnota: stejná jako Název")}
-
+                    {echo \Admin\Helper\FormPrinter::input('text', 'metatitle', array($action,'metaTitle'), array('placeholder'=>'Výchozí hodnota: stejná jako Název'))}
                     {if isset($errors["metaTitle"])}
                     <label class="error">{echo join("<br/>", $errors["metaTitle"])}</label>
                     {/if}
@@ -223,7 +205,6 @@
                 <label>Meta-popis</label>
                 <span class="field">
                     <textarea rows="5" name="metadescription" class="width80" >{echo \Admin\Helper\FormPrinter::iset($action,'metaDescription')}</textarea>
-                    
                     {if isset($errors["metaDescription"])}
                     <label class="error">{echo join("<br/>", $errors["metaDescription"])}</label>
                     {/if}
@@ -233,8 +214,7 @@
             <p>
                 <label>Klíčová slova<small>Pro interní vyhledávač</small></label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('keywords', array($action,'keywords'), false, 'width80', "Oddělovač: mezera")}
-
+                    {echo \Admin\Helper\FormPrinter::input('text', 'keywords', array($action,'keywords'), array('placeholder'=>"Oddělovač: mezera"))}
                     {if isset($errors["keywords"])}
                     <label class="error">{echo join("<br/>", $errors["keywords"])}</label>
                     {/if}
