--- a/modules/admin/view/email/edit.phtml
+++ b/modules/admin/view/email/edit.phtml
@@ -18,7 +18,7 @@
             <p>
                 <label>Název šablony*</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('title', array($template,'title'), true)}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'title', array($template,'title'), array('required'=>true))}
                     {if isset($errors["title"])}
                     <label class="error">{echo join("<br/>", $errors["title"])}</label>
                     {/if}
@@ -27,7 +27,7 @@
             <p>
                 <label>Předmět</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('subject', array($template,'subject'), true)}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'subject', array($template,'subject'), array('required'=>true))}
                     {if isset($errors["subject"])}
                     <label class="error">{echo join("<br/>", $errors["subject"])}</label>
                     {/if}
@@ -36,7 +36,7 @@
             <p>
                 <label>Text*</label>
                 <span class="field">
-                    <textarea rows="20" name="text" id="ckeditor">{echo $template->body}</textarea>
+                    <textarea rows="20" name="text" id="ckeditor">{echo \Admin\Helper\FormPrinter::iset($template,'body')}</textarea>
                     {if isset($errors["body"])}
                     <label class="error">{echo join("<br/>", $errors["body"])}</label>
                     {/if}
@@ -52,7 +52,7 @@
             <p>
                 <label>Text EN*</label>
                 <span class="field">
-                    <textarea rows="20" name="texten" id="ckeditor2">{echo $template->bodyEn}</textarea>
+                    <textarea rows="20" name="texten" id="ckeditor2">{echo \Admin\Helper\FormPrinter::iset($template,'bodyEn')}</textarea>
                     {if isset($errors["bodyEn"])}
                     <label class="error">{echo join("<br/>", $errors["bodyEn"])}</label>
                     {/if}
