--- a/modules/admin/view/imessage/index.phtml
+++ b/modules/admin/view/imessage/index.phtml
@@ -26,10 +26,11 @@
         <tbody>
 
             {if (!empty($imessages))}
+                {script $types=\Admin\Model\ImessageModel::getTypes()}
                 {foreach $message in $imessages}
                     <tr>
                         <td>{echo $message->getTitle()}</td>
-                        <td>{echo ucfirst($message->getMessageType())}</td>
+                        <td>{echo $types[$message->getMessageType()]}</td>
                         <td>{echo $message->getBody()}</td>
                         <td>{echo $message->getDisplayFrom()}</td>
                         <td>{echo $message->getDisplayTo()}</td>
