--- a/modules/admin/view/user/add.phtml
+++ b/modules/admin/view/user/add.phtml
@@ -14,7 +14,7 @@
         <p>
             <label>Jméno*</label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('firstname', array($user,'firstname'), true)}
+                {echo \Admin\Helper\FormPrinter::input('text', 'firstname', array($user,'firstname'), array('required'=>true))}
                 {if isset($errors["firstname"])}
                 <label class="error">
                     {echo join("<br/>", $errors["firstname"])}
@@ -25,7 +25,7 @@
         <p>
             <label>Příjmení*</label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('lastname', array($user,'lastname'), true)}
+                {echo \Admin\Helper\FormPrinter::input('text', 'lastname', array($user,'lastname'), array('required'=>true))}
                 {if isset($errors["lastname"])}
                 <label class="error">
                     {echo join("<br/>", $errors["lastname"])}
@@ -36,7 +36,7 @@
         <p>
             <label>Telefon</label>
             <span class="field">
-                <input type="tel" name="phone" class="width80" value="{echo isset($user)? $user->phoneNumber: ""}" />
+                {echo \Admin\Helper\FormPrinter::input('tel', 'phone', array($user,'phoneNumber'))}
                 {if isset($errors["phoneNumber"])}
                 <label class="error">
                     {echo join("<br/>", $errors["phoneNumber"])}
@@ -58,7 +58,7 @@
         <p>
             <label>Email*</label>
             <span class="field">
-                <input required type="email" name="email" class="width80" value="{echo isset($user)? $user->email: ""}" />
+                {echo \Admin\Helper\FormPrinter::input('email', 'email', array($user,'email'), array('required'=>true))}
                 {if isset($errors["email"])}
                 <label class="error">
                     {echo join("<br/>", $errors["email"])}
@@ -93,10 +93,9 @@
             <label>Role</label>
             <span class="field">
                 <select name="role" class="width80">
-                    <option value="role_member">Člen</option>
-                    <option value="role_participant">Člen s přístupem do administrace</option>
-                    <option value="role_admin">Admin</option>
-                    <option value="role_superadmin">Super Admin</option>
+                    {foreach $role in $roles}
+                        <option value="{echo $role}">{echo $role}</option>
+                    {/foreach}
                 </select>
                 {if isset($errors["role"])}
                 <label class="error">
