--- a/modules/admin/view/user/updateprofile.phtml
+++ b/modules/admin/view/user/updateprofile.phtml
@@ -13,7 +13,7 @@
         <p>
             <label>Jméno*</label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('firstname', array($user,'firstname'), true)}
+                {echo \Admin\Helper\FormPrinter::input('text', 'firstname', array($user,'firstname'), array('required'=>true))}
                 {if isset($errors["firstname"])}
                 <label class="error">
                     {echo join("<br/>", $errors["firstname"])}
@@ -24,7 +24,7 @@
         <p>
             <label>Příjmení*</label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('lastname', array($user,'lastname'), true)}
+                {echo \Admin\Helper\FormPrinter::input('text', 'lastname', array($user,'lastname'), array('required'=>true))}
                 {if isset($errors["lastname"])}
                 <label class="error">
                     {echo join("<br/>", $errors["lastname"])}
@@ -35,7 +35,7 @@
         <p>
             <label>Telefon</label>
             <span class="field">
-                <input type="tel" name="phone" class="width80" value="{echo $user->phoneNumber}" />
+                {echo \Admin\Helper\FormPrinter::input('tel', 'phone', array($user,'phoneNumber'))}
                 {if isset($errors["phoneNumber"])}
                 <label class="error">
                     {echo join("<br/>", $errors["phoneNumber"])}
@@ -57,7 +57,7 @@
         <p>
             <label>Email*</label>
             <span class="field">
-                <input required type="email" name="email" class="width80" value="{echo $user->email}" />
+                {echo \Admin\Helper\FormPrinter::input('email', 'email', array($user,'email'), array('required'=>true))}
                 {if isset($errors["email"])}
                 <label class="error">
                     {echo join("<br/>", $errors["email"])}
