--- a/modules/admin/view/action/showcomments.phtml
+++ b/modules/admin/view/action/showcomments.phtml
@@ -1,5 +1,6 @@
 <ul class="maintabmenu multipletabmenu">
     <li><a href="/admin/action/">Akce</a></li>
+    <li><a href="/admin/action/showattendance/">Docházka</a></li>
     <li><a href="/admin/action/add/">Přidat Akci</a></li>
     <li><a href="/admin/action/edit/{echo $action->getId()}">Upravit Akci</a></li>
     <li class="current"><a href="#">Komentáře k akci</a></li>
