--- a/modules/admin/view/email/send.phtml
+++ b/modules/admin/view/email/send.phtml
@@ -41,7 +41,7 @@
             <p id="singleRecipient">
                 <label>Příjemci*</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('singlerecipients', array($email,'recipientlist'), false, 'width80', 'Emaily oddělené čárkou')}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'singlerecipients', array($email,'recipientlist'), array('placeholder'=>'Emaily oddělené čárkou'))}
                     {if isset($errors["recipientlist"])}
                     <label class="error">{echo join("<br/>", $errors["recipientlist"])}</label>
                     {/if}
@@ -61,7 +61,7 @@
             <p>
                 <label>Předmět*</label>
                 <span class="field">
-                    {echo \Admin\Helper\FormPrinter::textInput('subject', array($email,'subject'), true)}
+                    {echo \Admin\Helper\FormPrinter::input('text', 'subject', array($email,'subject'), array('required'=>true))}
                     {if isset($errors["subject"])}
                     <label class="error">{echo join("<br/>", $errors["subject"])}</label>
                     {/if}
@@ -70,7 +70,7 @@
             <p>
                 <label>Zpráva*</label>
                 <span class="field">
-                    <textarea rows="20" name="text" id="ckeditor">{echo isset($email)? $email->body: ""}</textarea>
+                    <textarea rows="20" name="text" id="ckeditor">{echo \Admin\Helper\FormPrinter::iset($email,'body')}</textarea>
                     {if isset($errors["body"])}
                     <label class="error">{echo join("<br/>", $errors["body"])}</label>
                     {/if}
