--- a/modules/admin/view/index/index.phtml
+++ b/modules/admin/view/index/index.phtml
@@ -6,13 +6,16 @@
     {include imessages.phtml}
     <div class="grid_8">
         <div class="contenttitle">
-            <h2 class="button"><span>Přidat</span></h2>
+            <h2 class="button"><span>Rychlé možnosti</span></h2>
         </div><!--contenttitle-->
         <ul class="widgetlist">
-            <li><a href="/admin/news/add/" class="message">Novinku</a></li>
-            <li><a href="/admin/action/add/" class="events">Akci</a></li>
-            <li><a href="/admin/gallery/add/" class="upload">Galerii</a></li>
-            {if $isAdmin}<li><a href="/admin/partner/add/" class="upload">Partnera</a></li>{/if}
+            <li><a href="/admin/news/add/" class="message">+ Novinku</a></li>
+            <li><a href="/admin/action/add/" class="events">+ Akci</a></li>
+            <li><a href="/admin/gallery/add/" class="upload">+ Galerii</a></li>
+            {if $isAdmin}
+                <li><a href="/admin/partner/add/" class="upload">+ Partnera</a></li>
+                <li><a href="/admin/action/showattendance/" class="events">Docházka</a></li>
+            {/if}
         </ul>
     </div>
 
@@ -20,7 +23,7 @@
         <div class="widgetbox">
             <div class="title"><h2 class="chart"><span>Online návštěvníci</span></h2></div>
             <div class="widgetcontent padding0">
-                <iframe width="100%" height="200" src="http://piwik.hastrman.cz/index.php?module=Widgetize&action=iframe&widget=1&moduleToWidgetize=Live&actionToWidgetize=getSimpleLastVisitCount&idSite=1&period=week&date=today&disableLink=1&widget=1&token_auth=e49c4884f0eb21411273f82ba739984e" scrolling="no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+                Piwik widget
             </div><!--widgetcontent-->
         </div><!--widgetbox-->
     </div><!--grid_4-->
@@ -31,7 +34,7 @@
         <div class="widgetbox">
             <div class="title"><h2 class="chart"><span>Návštěvnost</span></h2></div>
             <div class="widgetcontent padding0">
-                <iframe width="100%" height="350" src="http://piwik.hastrman.cz/index.php?module=Widgetize&action=iframe&columns[]=nb_visits&widget=1&moduleToWidgetize=VisitsSummary&actionToWidgetize=getEvolutionGraph&idSite=1&period=week&date=today&disableLink=1&widget=1&token_auth=e49c4884f0eb21411273f82ba739984e" scrolling="no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+                Piwik widget
             </div><!--widgetcontent-->
         </div><!--widgetbox-->
     </div><!--grid_10-->
