--- a/modules/admin/view/menu.phtml
+++ b/modules/admin/view/menu.phtml
@@ -7,7 +7,7 @@
     {if $isSuperAdmin}
     <li><a href="/admin/partner/" class="grid"><span>Partneři</span></a></li>
     <li><a href="/admin/analytics/" class="charts"><span>Analytics</span></a></li>
-    <li><a href="/admin/email/" class="chat"><span>Poslat email</span></a></li>
+    <li><a href="/admin/email/send/" class="chat"><span>Poslat email</span></a></li>
     <li>
         <a href="/admin/user/" class="users menudrop"><span>Uživatelé</span></a>
         <ul>
