--- a/modules/admin/view/news/help.phtml
+++ b/modules/admin/view/news/help.phtml
@@ -75,7 +75,7 @@
                 <li>Odkaz na galerii - vloží odkaz na aktivní galerii</li>
                 <li>Odkaz na akci - vloží odkaz na aktivní nebo archivovanou akci</li>
                 <li>Odkaz na novinku - vloží odkaz na aktivní nebo archivovanou  novinku</li>
-                <li>Odkaz na stránku - v rámci hastrmana. Odkaz na stránky v sekci Obsah webu</li>
+                <li>Odkaz na stránku - v rámci sokola. Odkaz na stránky v sekci Obsah webu</li>
             </ul>
                 <br/><br/>
                 <strong>Metadata</strong> jsou důležitá pro interní vyhledávač. Každý den v noci se spustí kód, který indexuje obsah stránek
