--- a/modules/admin/view/partner/edit.phtml
+++ b/modules/admin/view/partner/edit.phtml
@@ -17,7 +17,7 @@
         <p>
             <label>Parner*</label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('title', array($partner,'title'), true)}
+                {echo \Admin\Helper\FormPrinter::input('text', 'title', array($partner,'title'), array('required'=>true))}
                 {if isset($errors["title"])}
                 <label class="error">{echo join("<br/>", $errors["title"])}</label>
                 {/if}
@@ -49,7 +49,7 @@
         <p>
             <label>WWW*</label>
             <span class="field">
-                <input required type="url" name="web" class="width80" value="{echo $partner->web}"/>
+                {echo \Admin\Helper\FormPrinter::input('url', 'web', array($partner,'web'), array('required'=>true))}
                 {if isset($errors["web"])}
                 <label class="error">{echo join("<br/>", $errors["web"])}</label>
                 {/if}
@@ -58,7 +58,7 @@
         <p>
             <label>Pořadí<small>Max. 99</small></label>
             <span class="field">
-                {echo \Admin\Helper\FormPrinter::textInput('rank', array($partner,'rank',1))}
+                {echo \Admin\Helper\FormPrinter::input('text', 'rank', array($partner,'rank',1))}
                 {if isset($errors["rank"])}
                 <label class="error">{echo join("<br/>", $errors["rank"])}</label>
                 {/if}
