--- a/modules/admin/view/user/login.phtml
+++ b/modules/admin/view/user/login.phtml
@@ -50,11 +50,11 @@
                     <form id="login" action="#" method="post">
                         <p>
                             <label for="email" class="bebas">Email</label>
-                            <input type="email" id="email" name="email" class="radius2" required autofocus/>
+                            {echo \Admin\Helper\FormPrinter::input('email', 'email', array(), array('class'=>'radius2', 'required'=>true, 'autofocus'=>true, 'id'=>'email'))}
                         </p>
                         <p>
                             <label for="password" class="bebas">Heslo</label>
-                            <input type="password" id="password" name="password" class="radius2" required/>
+                            {echo \Admin\Helper\FormPrinter::input('password', 'password', array(), array('class'=>'radius2', 'required'=>true, 'id'=>'password'))}
                         </p>
                         <p>
                             <input class="submit" name="submitLogin" type="submit" value="Přihlásit se" />
